--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Writer</title>
-    <meta name="og:title" content="Writer" />
+    <title>Humm</title>
+    <meta name="og:title" content="Humm" />
     <meta name="description" content="Text editor." />
     <meta name="og:description" content="Text editor." />
-    <meta name="twitter:image" content="https://writer.paco.sh/card.png" />
-    <meta name="og:image" content="https://writer.paco.sh/card.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Language" content="en" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@pacocoursey" />
-    <meta name="apple-mobile-web-app-title" content="Paco" />
-    <meta name="author" content="Paco Coursey" />
-    <meta name="og:url" content="https://writer.paco.sh" />
+    <meta name="apple-mobile-web-app-title" content="Humm" />
+    <meta name="author" content="DWhirlpool" />
+    <meta name="og:url" content="https://hummf.now.sh" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./style.css" />
