--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="og:url" content="https://hummf.now.sh" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./style.css" />
+    <!-- Manifest -->
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <main></main>
