--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- Manifest -->
     <link rel="manifest" href="./manifest.json" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./narwhal.png">
   </head>
   <body>
     <main></main>
